--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -9,9 +9,7 @@
     <string name="dialog_edit_pref_label_value">Value</string>
     <string name="dialog_edit_pref_edit_value_hint">some secret</string>
     <string name="dialog_edit_pref_button_apply">APPLY</string>
-    <string name="dialog_edit_pref_error_empty_key_value">keyとvalueが入力されていません</string>
-    <string name="dialog_edit_pref_error_empty_key">keyが入力されていません</string>
-    <string name="dialog_edit_pref_error_empty_value">valueが入力されていません</string>
+    <string name="dialog_edit_pref_error_empty_key">key is required</string>
 
     <string name="recyclerview_pref_entry_label_key">key</string>
     <string name="recyclerview_pref_entry_label_value">value</string>
